Fixed spacing in the donate page

--- a/sass/_donate.scss
+++ b/sass/_donate.scss
@@ -4,14 +4,12 @@
     justify-content: space-between;
     margin-bottom: 4rem;
     &__transfer {
-      width: 45%;
+      width: 30%;
       display: flex;
       justify-content: space-between;
+      flex-direction: column;
       & .heading {
         align-items: flex-start;
-      }
-      & > * {
-        width: 45%;
       }
       & .project {
         & .btn {
@@ -20,7 +18,7 @@
       }
     }
     &__text {
-      width: 50%;
+      width: 60%;
       & .heading {
         align-items: flex-start;
       }
